# pinned-aliasable.rs

./: Cargo.toml  README.md
src/: boxed.rs  inline.rs  lib.rs
