[package]
name = "pinned-aliasable"
version = "0.1.1"
edition = "2021"
description = "Pin-based stopgap for unboxed aliasable values in self-referential data structures"
repository = "https://github.com/SabrinaJewson/pinned-aliasable"
license = "MIT"
keywords = ["aliasable", "pinned", "unboxed", "self-reference", "self-referencing"]
categories = ["no-std", "rust-patterns"]

[dependencies]

[dev-dependencies]
pin-project = "1.0.7"
pin-utils = "0.1.0"
